getting rid of duplication configs in shark-env.sh versus spark-env.sh